kibana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5601
  selector:
    app: kibana
