redis-master.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  labels:
    app: redis
    role: master
    tier: backend
spec:
  type: NodePort
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: redis
    role: master
    tier: backend
    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-master
spec:
  selector:
     matchLabels:
        app: redis
        role: master
        tier: backend
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 1
      maxSurge: 1 
  template:
    metadata:
      labels:
        app: redis
        role: master
        tier: backend
    spec:
      containers:
        - image: redis
          name: master
          resources:
            requests:
                cpu: 100m
                memory: 100Mi
          ports:
            - containerPort: 6379
