redis-slave.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-slave
  labels:
    app: redis
    role: slave
    tier: backend
spec:
  type: NodePort
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: redis
    role: slave
    tier: backend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-slave
spec:
  selector:
    matchLabels:
      app: redis
      role: slave
      tier: backend
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: redis
        role: slave
        tier: backend
    spec:
      containers:
        - image: redis
          name: slave
          args: [
            "/usr/local/bin/redis-server",
            "/etc/redis/redis.conf",
            "--slaveof", "$(REDIS_MASTER_HOST)", "$(REDIS_MASTER_PORT)",
            "--port", "$(REDIS_SLAVE_PORT)"
          ]
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: config
              mountPath: /etc/redis/
      volumes:
        - name: config
          configMap:
            name: radis-slave
