web-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server
  labels:
    app: web-server
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8085
  selector:
    app: web-server
