kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: kibana
              servicePort: 80
            path: /
