web-server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: web-server
              servicePort: 80
            path: /web-server
